09-observability/09c-tracing/tempo-subscription.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tempo
  labels:
    kubernetes.io/metadata.name: tempo
    openshift.io/cluster-monitoring: "true"
